tests/transpiler/x/scala/record_assign.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/record_assign.scala:5: error: value n is not a member of Any
    c.n = c.n + 1
      ^
one error found
