tests/transpiler/x/scala/record_assign.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:43:01 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def inc(c: Any) = {
    c.n = c.n + 1
  }

  def main(args: Array[String]): Unit = {
    case class Counter(n: Int)
    var c: Counter = Counter(0)
    inc(c)
    println(c.n)
  }
}
